--- a/jeu/characters.html
+++ b/jeu/characters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Genesis - Personnages</title>
+  <title>Genesis - Characters</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* Styles spécifiques à la présentation des personnages */
@@ -44,31 +44,41 @@
 </head>
 <body>
   <script src="leader.html"></script>
+  <header>
+    <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="characters.html">Characters</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="download.html">Download</a></li>
+    </ul>
+  </header>
 
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="story.html">Notre histoire</a></li>
-      <li><a href="characters.html">Personnages</a></li>
-      <li><a href="download.html">Téléchargement</a></li>
-      <li><a href="gallery.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </ul>
   </nav>
 
   <main>
-    <h1>Personnages</h1>
+    
+    <h1>Characters</h1>
 
     <div class="character">
       <div class="character-img">
-        <img src="character1.jpg" alt="Personnage 1">
+        <img src="character1.jpg" alt="Character 1">
       </div>
       <div class="character-info">
-        <h2 class="character-name">Personnage 1</h2>
-        <p class="character-description">Description du personnage 1.</p>
+        <h2 class="character-name">Character 1</h2>
+        <p class="character-description">Description</p>
         <p class="character-text">
-          Le personnage 1 est un héros courageux qui se bat pour protéger la galaxie contre les forces du mal.
-          Il possède des pouvoirs extraordinaires et une volonté inébranlable.
+          TO COMPLETE
         </p>
         <p class="character-text">
           Son histoire est celle d'un destin extraordinaire qui l'a conduit à devenir l'un des plus grands défenseurs de l'univers.
@@ -81,8 +91,8 @@
         <img src="character2.jpg" alt="Personnage 2">
       </div>
       <div class="character-info">
-        <h2 class="character-name">Personnage 2</h2>
-        <p class="character-description">Description du personnage 2.</p>
+        <h2 class="character-name">Character 2</h2>
+        <p class="character-description">Description</p>
         <p class="character-text">
           Le personnage 2 est un mystérieux voyageur intergalactique, toujours à la recherche de nouvelles aventures.
           Son charisme et sa sagesse en font un allié précieux dans la lutte contre les forces obscures qui menacent la paix dans l'univers.
@@ -95,10 +105,10 @@
 
     <div class="character">
       <div class="character-img">
-        <img src="character3.jpg" alt="Personnage 3">
+        <img src="character3.jpg" alt="">
       </div>
       <div class="character-info">
-        <h2 class="character-name">Personnage 3</h2>
+        <h2 class="character-name">Companion 1</h2>
         <p class="character-description">Description du personnage 3.</p>
         <p class="character-text">
           Le personnage 3 est un ingénieur talentueux qui possède une intelligence supérieure et une expertise technique inégalée.
@@ -112,7 +122,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Genesis. Tous droits réservés.</p>
+    <p>&copy; 2023 Genesis. All right reserved.</p>
   </footer>
 
   <section id="stars-container"></section>
