--- a/jeu/contact.html
+++ b/jeu/contact.html
@@ -80,47 +80,57 @@
 <body>
   <script src="leader.html"></script>
 
+  <header>
+    <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="characters.html">Characters</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="download.html">Download</a></li>
+    </ul>
+  </header>
+
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="story.html">Notre histoire</a></li>
-      <li><a href="characters.html">Personnages</a></li>
-      <li><a href="download.html">Téléchargement</a></li>
-      <li><a href="gallery.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </ul>
   </nav>
 
   <main id="contact">
     <section id="contact-info">
-      <h2>Contactez-nous</h2>
-      <p>Pour toute question ou demande, n'hésitez pas à nous contacter :</p>
+      <h2>Contact us</h2>
+      <p>For any questions or suggestions, feel free to contact us :</p>
       <ul>
-        <li>Email: contact@genesisgame.com</li>
-        <li>Téléphone: +1234567890</li>
-        <li>Adresse: 123 Rue des Étoiles, Planète Alpha</li>
+        <li>Email: contactastergenesis@gmail.com</li>
+        <li>Adress: 123 Path of Stars, Alpha Planet</li>
       </ul>
     </section>
 
     <section id="contact-form">
-      <h2>Formulaire de contact</h2>
+      <h2>Contact form</h2>
       <form>
-        <label for="name">Nom :</label>
-        <input type="text" id="name" name="name" placeholder="Votre nom" required>
+        <label for="name">Name :</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required>
 
         <label for="email">Email :</label>
-        <input type="email" id="email" name="email" placeholder="Votre email" required>
+        <input type="email" id="email" name="email" placeholder="Your email" required>
 
         <label for="message">Message :</label>
-        <textarea id="message" name="message" placeholder="Votre message" required></textarea>
+        <textarea id="message" name="message" placeholder="Your message" required></textarea>
 
-        <button type="submit">Envoyer</button>
+        <button type="submit">Send</button>
       </form>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2023 Genesis. Tous droits réservés.</p>
+    <p>&copy; 2023 Genesis. All right reserved.</p>
   </footer>
 
   <section id="stars-container"></section>
