--- a/jeu/gallery.html
+++ b/jeu/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Genesis - Galerie</title>
+  <title>Genesis - Gallery</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* Styles spécifiques à la galerie */
@@ -60,19 +60,30 @@
 <body>
   <script src="leader.html"></script>
 
+  <header>
+    <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="characters.html">Characters</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="download.html">Download</a></li>
+    </ul>
+  </header>
+
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="story.html">Notre histoire</a></li>
-      <li><a href="characters.html">Personnages</a></li>
-      <li><a href="download.html">Téléchargement</a></li>
-      <li><a href="gallery.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </ul>
   </nav>
 
   <main>
-    <h1>Galerie</h1>
+    <h1>Gallery</h1>
 
     <div class="gallery">
       <section class="photo">
@@ -113,7 +124,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Genesis. Tous droits réservés.</p>
+    <p>&copy; 2023 Genesis. All right reserved..</p>
   </footer>
 
   <section id="stars-container"></section>
