--- a/jeu/header.html
+++ b/jeu/header.html
@@ -1,15 +1,17 @@
 <header>
   <nav>
     <ul>
-      <li><a href="accueil.html">Accueil</a></li>
-      <li><a href="a-propos.html">À propos</a></li>
-      <li><a href="personnages.html">Personnages</a></li>
-      <li><a href="telechargement.html">Téléchargement</a></li>
-      <li><a href="galerie.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+        <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
+
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="story.html">Story</a></li>
+          <li><a href="characters.html">Characters</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact us</a></li>
+          <li><a href="download.html">Download</a></li>
     </ul>
   </nav>
   <img src="logo.png" alt="Logo Genesis">
   <h1>Genesis</h1>
-  <p>Aventure cosmique</p>
+  <p>The Origin of the Unkown</p>
 </header>
