--- a/jeu/index.html
+++ b/jeu/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Genesis - Accueil</title>
+  <title>Genesis - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Genesis</h1>
-    <p>Aventure cosmique</p>
+    <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="characters.html">Characters</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="download.html">Download</a></li>
+    </ul>
   </header>
 
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="story.html">Notre histoire</a></li>
-      <li><a href="personnages.html">Personnages</a></li>
-      <li><a href="download.html">Téléchargement</a></li>
-      <li><a href="gallery.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </ul>
   </nav>
-
-  <main>
     <section id="story">
-      <h2>Notre histoire</h2>
-      <p>Il y a bien longtemps, lorsque toutes les étoiles ne brillaient pas encore dans le ciel, vivaient deux jeunes enfants. Ils venaient d'un petit village isolé, perdu entre les montagnes et les vallées. Les enfants étaient toujours heureux de vivre ici avec leur famille et leurs amis, car ce village était spécial.</p>
-      <p>Une nuit, quelque chose d'inhabituel s'est produit. Un couple et leurs compagnons avaient disparu sans un mot. C'était la première fois que quelqu'un quittait le village. Les enfants étaient très tristes car le couple avait toujours été si gentil avec eux et ils allaient leur manquer. Leurs parents les ont rassurés : un jour, même les enfants partiront.</p>
+      <div><h2>Story</h2></div>
+      
+      <p class="indent">A long time ago, when not all the stars were shining in the sky, lived two young children. They came from a little and isolated village lost between the mountains and some valleys.</p>
+      <p class="margin">The children were always happy to live here with their family and friends, because this village was special. In the village everyone received a companion at their birth and the two children were no exception. The oldest received a magpie while the youngest received a spider. They loved dearly their companions and did everything with them. Even if their life was sometimes monotone, they never felt the need to leave.</p>
+      <p class="indent">One night, while everyone was sleeping, something unusual happened. A couple and their companions had disappeared without a word. It was the first time that someone left the village. The children were very sad because the couple had always be so kind to them and they were going to miss them. </p>
+      <p class="margin">Their parents reassured them: one day, even the children would leave the village too, they will be all grown up. To this day, more and more disappearances happened until the family remained alone in a ghost village, but their parents were always reassuring them. 
+        Unfortunately, the inevitable happened. Their parents disappeared too.</p>        
     </section>
 
     <section id="button-section">
-      <h2>Commence ton aventure</h2>
-      <button id="start-button">Jouer</button>
-    </section>
-
-    <section id="filler-section">
-      <h2>Remplis cette section</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pretium libero in interdum facilisis. Sed eget elit sit amet nisl lacinia lobortis. Ut efficitur malesuada metus, non varius neque.</p>
+      <br><div><h2>Begin your adventure</h2></div>
+      <br><div><a href="download.html"><button id="start-button">Download</button></a></div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2023 Genesis. Tous droits réservés.</p>
+    <br><h2 class="margin">About us</h2>
+      <p class="margin">We are a group of 3 students from EPITA, previously 4. Unfortunately, one of the member left our group, letting the rest of us left.
+         </p>
+    <p c>&copy; 2023 Genesis. All right reserved.</p>
   </footer>
 </body>
 </html>
