--- a/jeu/download.html
+++ b/jeu/download.html
@@ -120,14 +120,25 @@
 <body>
   <script src="leader.html"></script>
 
-  <nav>
+  <header>
+    <a href ="#" class="logo"><img src ="genesis.png" width="200" ></a>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="story.html">Our Story</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="characters.html">Characters</a></li>
-      <li><a href="download.html">Download</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="download.html">Download</a></li>
+    </ul>
+  </header>
+
+  <nav>
+    <ul>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </ul>
   </nav>
 
@@ -135,7 +146,7 @@
 
   <main id="download">
     <h1>Download Genesis</h1>
-    <p>Embark on an epic space adventure!</p>
+    <p>Embark on a new journey!</p>
     <button>Download Now</button>
   </main>
 
