--- a/jeu/download.html
+++ b/jeu/download.html
@@ -147,7 +147,8 @@
   <main id="download">
     <h1>Download Genesis</h1>
     <p>Embark on a new journey!</p>
-    <button>Download Now</button>
+   
+    <button> <a href="Screenshot 2023-05-31 at 07.05.03.png" target="_blank">Download Now</a></button>
   </main>
 
   <footer>
