--- a/jeu/gallery.html
+++ b/jeu/gallery.html
@@ -95,7 +95,7 @@
       </section>
 
       <section class="photo">
-        <img src="Picture1é.png" alt="Photo 2">
+        <img src="Picture5.png" alt="Photo 2">
         <div class="photo-text">
           <p>Map of the first world</p>
           
