--- a/jeu/characters.html
+++ b/jeu/characters.html
@@ -133,7 +133,7 @@ her sleep.
         <img src="character3.jpg" alt="">
       </div>
       <div class="character-info">
-        <h2 class="character-name">Companion 2</h2>
+        <h2 class="character-name">Companion 2 : The Spider</h2>
         <img src="Screenshot 2023-05-31 at 11.22.06.png">
   
       </div>
