--- a/jeu/characters.html
+++ b/jeu/characters.html
@@ -76,7 +76,7 @@
       </div>
       <div class="character-info">
         <h2 class="character-name">Character 1 : Theo</h2>
-        <img src="Capture d’écran 2023-05-31 à 10.53.40.png">
+        <img src="image.png">
         <p class="character-description">Description</p>
         <p class="character-text">
           The first one is the oldest, a boy
@@ -95,7 +95,7 @@ outside watching the nature and analyzing the bugs and wildlife near him
       </div>
       <div class="character-info">
         <h2 class="character-name">Character 2 : Lea</h2>
-        <img src="Capture d’écran 2023-05-31 à 10.55.00.png">
+        <img src="image-1.png">
 
         <p class="character-description">Description</p>
         <p class="character-text">
