--- a/jeu/download.html
+++ b/jeu/download.html
@@ -148,7 +148,7 @@
     <h1>Download Genesis</h1>
     <p>Embark on a new journey!</p>
   
-    <button><a href="ang_tim.zip" download>Download Now</a></button>
+    <button><a href="Genesis.exe.zip" download>Download Now</a></button>
    
   </main>
 
